@@ -77,6 +77,7 @@ NEWS
   * [mod_ssi] config ssi.conditional-requests
   * [mod_ssi] config ssi.exec (fixes #2051)
   * [mod_redirect,mod_rewrite] short-circuit if blank replacement (fixes #2085)
+  * [mod_indexfile] save physical path to env (fixes #448, #892)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
